CSharp/ThirdParty/ENet/enet.h

/**
 * Portable internet address structure. 
 *
 * The host must be specified in network byte-order, and the port must be in host 
 * byte-order. The constant ENET_HOST_ANY may be used to specify the default 
 * server host. The constant ENET_HOST_BROADCAST may be used to specify the
 * broadcast address (255.255.255.255).  This makes sense for enet_host_connect,
 * but not for enet_host_create.  Once a server responds to a broadcast, the
 * address is updated from ENET_HOST_BROADCAST to the server's actual IP address.
 */
typedef struct _ENetAddress
{	
	enet_uint32 host;
	enet_uint16 port;
}ENetAddress;
/**
 * ENet packet structure.
 *
 * An ENet data packet that may be sent to or received from a peer. The shown 
 * fields should only be read and never modified. The data field contains the 
 * allocated data for the packet. The dataLength fields specifies the length 
 * of the allocated data.  The flags field is either 0 (specifying no flags), 
 * or a bitwise-or of any combination of the following flags:
 *
 *    ENET_PACKET_FLAG_RELIABLE - packet must be received by the target peer
 *    and resend attempts should be made until the packet is delivered
 *
 *    ENET_PACKET_FLAG_UNSEQUENCED - packet will not be sequenced with other packets 
 *    (not supported for reliable packets)
 *
 *    ENET_PACKET_FLAG_NO_ALLOCATE - packet will not allocate data, and user must supply it instead
 
 @sa ENetPacketFlag
 */
typedef struct _ENetPacket
{	
	size_t referenceCount; /**< internal use only */
	enet_uint32 flags; /**< bitwise-or of ENetPacketFlag constants */
	enet_uint8 * data; /**< allocated data for packet */
	size_t dataLength; /**< length of data */
	ENetPacketFreeCallback freeCallback; /**< function to be called when the packet is no longer in use */
}ENetPacket;
/**
 * An ENet peer which data packets may be sent or received from. 
 *
 * No fields should be modified unless otherwise specified. 
 */
typedef struct _ENetPeer
{	
	ENetListNode dispatchList;
	struct _ENetHost * host;
	enet_uint16 outgoingPeerID;
	enet_uint16 incomingPeerID;
	enet_uint32 connectID;
	enet_uint8 outgoingSessionID;
	enet_uint8 incomingSessionID;
	ENetAddress address; /**< Internet address of the peer */
	void * data; /**< Application private data, may be freely modified */
	ENetPeerState state;
	ENetChannel * channels;
	size_t channelCount; /**< Number of channels allocated for communication with peer */
	enet_uint32 incomingBandwidth; /**< Downstream bandwidth of the client in bytes/second */
	enet_uint32 outgoingBandwidth; /**< Upstream bandwidth of the client in bytes/second */
	enet_uint32 incomingBandwidthThrottleEpoch;
	enet_uint32 outgoingBandwidthThrottleEpoch;
	enet_uint32 incomingDataTotal;
	enet_uint32 outgoingDataTotal;
	enet_uint32 lastSendTime;
	enet_uint32 lastReceiveTime;
	enet_uint32 nextTimeout;
	enet_uint32 earliestTimeout;
	enet_uint32 packetLossEpoch;
	enet_uint32 packetsSent;
	enet_uint32 packetsLost;
	enet_uint32 packetLoss; /**< mean packet loss of reliable packets as a ratio with respect to the constant ENET_PEER_PACKET_LOSS_SCALE */
	enet_uint32 packetLossVariance;
	enet_uint32 packetThrottle;
	enet_uint32 packetThrottleLimit;
	enet_uint32 packetThrottleCounter;
	enet_uint32 packetThrottleEpoch;
	enet_uint32 packetThrottleAcceleration;
	enet_uint32 packetThrottleDeceleration;
	enet_uint32 packetThrottleInterval;
	enet_uint32 pingInterval;
	enet_uint32 timeoutLimit;
	enet_uint32 timeoutMinimum;
	enet_uint32 timeoutMaximum;
	enet_uint32 lastRoundTripTime;
	enet_uint32 lowestRoundTripTime;
	enet_uint32 lastRoundTripTimeVariance;
	enet_uint32 highestRoundTripTimeVariance;
	enet_uint32 roundTripTime; /**< mean round trip time (RTT), in milliseconds, between sending a reliable packet and receiving its acknowledgement */
	enet_uint32 roundTripTimeVariance;
	enet_uint32 mtu;
	enet_uint32 windowSize;
	enet_uint32 reliableDataInTransit;
	enet_uint16 outgoingReliableSequenceNumber;
	ENetList acknowledgements;
	ENetList sentReliableCommands;
	ENetList sentUnreliableCommands;
	ENetList outgoingReliableCommands;
	ENetList outgoingUnreliableCommands;
	ENetList dispatchedCommands;
	int needsDispatch;
	enet_uint16 incomingUnsequencedGroup;
	enet_uint16 outgoingUnsequencedGroup;
	enet_uint32 unsequencedWindow [ENET_PEER_UNSEQUENCED_WINDOW_SIZE / 32];
	enet_uint32 eventData;
}ENetPeer;
/** An ENet packet compressor for compressing UDP packets before socket sends or receives.
 */
typedef struct _ENetCompressor
{	
	/** Context data for the compressor. Must be non-NULL. */
	void * context;
	/** Compresses from inBuffers[0:inBufferCount-1], containing inLimit bytes, to outData, outputting at most outLimit bytes. Should return 0 on failure. */
	size_t (ENET_CALLBACK * compress) (void * context, const ENetBuffer * inBuffers, size_t inBufferCount, size_t inLimit, enet_uint8 * outData, size_t outLimit);
	/** Decompresses from inData, containing inLimit bytes, to outData, outputting at most outLimit bytes. Should return 0 on failure. */
	size_t (ENET_CALLBACK * decompress) (void * context, const enet_uint8 * inData, size_t inLimit, enet_uint8 * outData, size_t outLimit);
	/** Destroys the context when compression is disabled or the host is destroyed. May be NULL. */
	void (ENET_CALLBACK * destroy) (void * context);
}ENetCompressor;
/** An ENet host for communicating with peers.
 *
 * No fields should be modified unless otherwise stated.

 @sa enet_host_create()
 @sa enet_host_destroy()
 @sa enet_host_connect()
 @sa enet_host_service()
 @sa enet_host_flush()
 @sa enet_host_broadcast()
 @sa enet_host_compress()
 @sa enet_host_compress_with_range_coder()
 @sa enet_host_channel_limit()
 @sa enet_host_bandwidth_limit()
 @sa enet_host_bandwidth_throttle()
 */
typedef struct _ENetHost
{	
	ENetSocket socket;
	ENetAddress address; /**< Internet address of the host */
	enet_uint32 incomingBandwidth; /**< downstream bandwidth of the host */
	enet_uint32 outgoingBandwidth; /**< upstream bandwidth of the host */
	enet_uint32 bandwidthThrottleEpoch;
	enet_uint32 mtu;
	enet_uint32 randomSeed;
	int recalculateBandwidthLimits;
	ENetPeer * peers; /**< array of peers allocated for this host */
	size_t peerCount; /**< number of peers allocated for this host */
	size_t channelLimit; /**< maximum number of channels allowed for connected peers */
	enet_uint32 serviceTime;
	ENetList dispatchQueue;
	int continueSending;
	size_t packetSize;
	enet_uint16 headerFlags;
	ENetProtocol commands [ENET_PROTOCOL_MAXIMUM_PACKET_COMMANDS];
	size_t commandCount;
	ENetBuffer buffers [ENET_BUFFER_MAXIMUM];
	size_t bufferCount;
	ENetChecksumCallback checksum; /**< callback the user can set to enable packet checksums for this host */
	ENetCompressor compressor;
	enet_uint8 packetData [2][ENET_PROTOCOL_MAXIMUM_MTU];
	ENetAddress receivedAddress;
	enet_uint8 * receivedData;
	size_t receivedDataLength;
	enet_uint32 totalSentData; /**< total data sent, user should reset to 0 as needed to prevent overflow */
	enet_uint32 totalSentPackets; /**< total UDP packets sent, user should reset to 0 as needed to prevent overflow */
	enet_uint32 totalReceivedData; /**< total data received, user should reset to 0 as needed to prevent overflow */
	enet_uint32 totalReceivedPackets; /**< total UDP packets received, user should reset to 0 as needed to prevent overflow */
}ENetHost;
/**
 * An ENet event type, as specified in @ref ENetEvent.
 */
typedef enum _ENetEventType
{	
	/** no event occurred within the specified time limit */
	ENET_EVENT_TYPE_NONE = 0,

	/** a connection request initiated by enet_host_connect has completed.  
	 * The peer field contains the peer which successfully connected. 
	 */
	ENET_EVENT_TYPE_CONNECT = 1,

	/** a peer has disconnected.  This event is generated on a successful 
	 * completion of a disconnect initiated by enet_pper_disconnect, if 
	 * a peer has timed out, or if a connection request intialized by 
	 * enet_host_connect has timed out.  The peer field contains the peer 
	 * which disconnected. The data field contains user supplied data 
	 * describing the disconnection, or 0, if none is available.
	 */
	ENET_EVENT_TYPE_DISCONNECT = 2,

	/** a packet has been received from a peer.  The peer field specifies the
	 * peer which sent the packet.  The channelID field specifies the channel
	 * number upon which the packet was received.  The packet field contains
	 * the packet that was received; this packet must be destroyed with
	 * enet_packet_destroy after use.
	 */
	ENET_EVENT_TYPE_RECEIVE = 3
}ENetEventType;
/**
 * An ENet event as returned by enet_host_service().
 
 @sa enet_host_service
 */
typedef struct _ENetEvent
{	
	ENetEventType type; /**< type of the event */
	ENetPeer * peer; /**< peer that generated a connect, disconnect or receive event */
	enet_uint8 channelID; /**< channel on the peer that generated the event, if appropriate */
	enet_uint32 data; /**< data associated with the event, if appropriate */
	ENetPacket * packet; /**< packet associated with the event, if appropriate */
}ENetEvent;
/** @defgroup global ENet global functions
 @{ 
 */

/** 
 Initializes ENet globally.  Must be called prior to using any functions in
 ENet.
 @returns 0 on success, < 0 on failure
 */
ENET_API int enet_initialize (void);
/** 
 Shuts down ENet globally.  Should be called when a program that has
 initialized ENet exits.
 */
ENET_API void enet_deinitialize (void);
/** @} */

/** @defgroup private ENet private implementation functions */

/**
 Returns the wall-time in milliseconds.  Its initial value is unspecified
 unless otherwise set.
 */
ENET_API enet_uint32 enet_time_get (void);
/**
 Sets the current wall-time in milliseconds.
 */
ENET_API void enet_time_set (enet_uint32);
/** @} */

/** @defgroup Address ENet address functions
 @{
 */
/** Attempts to resolve the host named by the parameter hostName and sets
 the host field in the address parameter if successful.
 @param address destination to store resolved address
 @param hostName host name to lookup
 @retval 0 on success
 @retval < 0 on failure
 @returns the address of the given hostName in address on success
 */
ENET_API int enet_address_set_host (ENetAddress * address, const char * hostName);
/** Gives the printable form of the ip address specified in the address parameter.
 @param address    address printed
 @param hostName   destination for name, must not be NULL
 @param nameLength maximum length of hostName.
 @returns the null-terminated name of the host in hostName on success
 @retval 0 on success
 @retval < 0 on failure
 */
ENET_API int enet_address_get_host_ip (const ENetAddress * address, char * hostName, size_t nameLength);
/** Attempts to do a reverse lookup of the host field in the address parameter.
 @param address    address used for reverse lookup
 @param hostName   destination for name, must not be NULL
 @param nameLength maximum length of hostName.
 @returns the null-terminated name of the host in hostName on success
 @retval 0 on success
 @retval < 0 on failure
 */
ENET_API int enet_address_get_host (const ENetAddress * address, char * hostName, size_t nameLength);
/** @} */

ENET_API ENetPacket * enet_packet_create (const void *, size_t, enet_uint32);
ENET_API void enet_packet_destroy (ENetPacket *);
ENET_API int enet_packet_resize (ENetPacket *, size_t);
ENET_API ENetHost * enet_host_create (const ENetAddress *, size_t, size_t, enet_uint32, enet_uint32);
ENET_API void enet_host_destroy (ENetHost *);
ENET_API ENetPeer * enet_host_connect (ENetHost *, const ENetAddress *, size_t, enet_uint32);
ENET_API int enet_host_check_events (ENetHost *, ENetEvent *);
ENET_API int enet_host_service (ENetHost *, ENetEvent *, enet_uint32);
ENET_API void enet_host_flush (ENetHost *);
ENET_API void enet_host_broadcast (ENetHost *, enet_uint8, ENetPacket *);
ENET_API void enet_host_compress (ENetHost *, const ENetCompressor *);
ENET_API int enet_host_compress_with_range_coder (ENetHost * host);
ENET_API void enet_host_channel_limit (ENetHost *, size_t);
ENET_API void enet_host_bandwidth_limit (ENetHost *, enet_uint32, enet_uint32);
ENET_API int enet_peer_send (ENetPeer *, enet_uint8, ENetPacket *);
ENET_API ENetPacket * enet_peer_receive (ENetPeer *, enet_uint8 * channelID);
ENET_API void enet_peer_ping (ENetPeer *);
ENET_API void enet_peer_reset (ENetPeer *);
ENET_API void enet_peer_disconnect (ENetPeer *, enet_uint32);
ENET_API void enet_peer_disconnect_now (ENetPeer *, enet_uint32);
ENET_API void enet_peer_disconnect_later (ENetPeer *, enet_uint32);
ENET_API void enet_peer_throttle_configure (ENetPeer *, enet_uint32, enet_uint32, enet_uint32);